# opentrons-ot2

./: .cruft.json  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.build  Dockerfile.build.py312  README.md  alarm_reset_plan.md  deploy.sh  deploy_executable.sh  docker-compose.yml  gcode_test.py  pyproject.toml  single_executable_plan.md  sonar-project.properties  sonarqube_plan.md  test_client.py  test_gpio.py  test_homing.py  test_io.py  test_motion.py  test_opentrons_driver.py
.claude/commands/: deploy-ot2.md
.github/workflows/: build-ot2-arm-wheels.yml  sonar.yml  test.yml
.gitlab/issue_templates/: Bug.md
config/: ot2_config.json  robot_settings.json
dev/tailscale setup/: plan.md  setup_tailscale.sh
dist_minimal/: download_wheels.sh  ot2_connector.py  pyproject.toml  requirements.txt
dist_minimal/zeroconf_stub/: pyproject.toml
dist_minimal/zeroconf_stub/zeroconf/: __init__.py
scripts/: README.md  deploy_python_changes.sh  install.sh  install_connector_service.sh  install_tailscale_service.sh  plan.md  setup_ot2.sh  setup_tailscale.sh  start_connector.sh  start_tailscale.sh  switch_mode.sh  ul_notes.md  verify_ot2.sh
src/unitelabs/opentrons_ot2/: __init__.py
src/unitelabs/opentrons_ot2/features/: __init__.py  calibration.py  heater_shaker.py  magnetic.py  motion_control.py  pipette.py  temperature.py  thermocycler.py
src/unitelabs/opentrons_ot2/io/: __init__.py  _errors.py  _legacy_direct.py  _legacy_gpio.py  _module_base.py  _types.py  hardware_proxy.py  heater_shaker.py  magnetic_module.py  modules.py  motion.py  temperature_module.py  thermocycler.py
tests/: conftest.py  test_create_app.py  test_create_app_with_robot_server.py  test_version.py
tests/features/: test_calibration_reads.py  test_calibration_simulation.py  test_lock.py  test_module_feature_registration.py  test_module_status_values.py  test_motion_control.py  test_motion_simulation.py  test_motor_current.py  test_pipette_simulation.py
tests/integration/: conftest.py  test_grpc_calibration.py  test_grpc_calibration_reads.py  test_grpc_motion_control.py  test_grpc_pipette.py
tests/integration/http_api/: test_robot_http_api.py
tests/io/: test_hardware_proxy.py  test_magnetic_driver_backend.py  test_module_errors.py  test_module_from_module.py  test_modules.py  test_motion_audio.py  test_plunger_home_current.py
workflows/ot2-home/: pyproject.toml
workflows/ot2-home/src/ot2_home/: __init__.py  __main__.py  _helpers.py  _steps.py  phase_01_home.py  workflow.py
workflows/ot2-jingle/: pyproject.toml
workflows/ot2-jingle/src/ot2_jingle/: __init__.py  __main__.py  _helpers.py  _steps.py  phase_01_jingle.py  workflow.py
workflows/ot2-transfer/: pyproject.toml
workflows/ot2-transfer/src/ot2_transfer/: __init__.py  __main__.py  _helpers.py  _steps.py  phase_01_setup.py  phase_02_transfer.py  workflow.py
workflows/scripts/: publish_workflows.py
workflows/shared/: pyproject.toml
workflows/shared/src/shared/ot2/: __init__.py  _constants.py  _instrument.py  _labware.py  _pipette.py
