[project]
name = "ot2-sila2"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pyserial>=3.5", "unitelabs-cdk>=0.9.0"]

[project.scripts]
ot2-sila2 = "ot2_connector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
