[project]
name = "ot2-transfer"
version = "0.1.0"
description = "Plate-to-plate column transfer on the Opentrons OT-2."
requires-python = ">=3.12"
dependencies = [
    "unitelabs-sdk[automate]~=0.11.3",
    "shared",
]

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov"]
dev = ["ruff", "pre-commit", "commitizen"]

[project.scripts]
workflow = "ot2_transfer.__main__:main"

[tool.unitelabs.workflow]
display_name = "OT-2 Plate-to-Plate Transfer"
entrypoint = "workflow.py:ot2_transfer_flow"
tags = ["ot2", "liquid-handling"]

[tool.uv]
default-groups = "all"
prerelease = "if-necessary-or-explicit"

[[tool.uv.index]]
name = "unitelabs"
url = "https://gitlab.com/api/v4/groups/1009252/-/packages/pypi/simple"
authenticate = "always"

[tool.uv.sources]
unitelabs-sdk = { index = "unitelabs" }
shared = { path = "../shared", editable = true }

[build-system]
requires = ["uv_build>=0.4,<0.10"]
build-backend = "uv_build"
